BUG#30622: ORDER BY on a SELECT causes results to be missed - Restore the original table condition if we've done index condition pushdown   for some index but later decided not to use it - Remove outdated comments